# zoidberg

./: .gitignore  PKG-INFO  README.rst  TODO  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
etc/: zoidberg.yaml.example
tests/: test_client.py  test_zoidberg.py
tests/etc/: zoidberg.yaml  zoidberg2.yaml
tests/etc/invalid/: bad_yaml.yaml  event_invalid_target.yaml
tests/moreactions/: actions.py
tests/thirdpartyactions/: actions.py
zoidberg/: actions.py  configuration.py  exceptions.py  gerrit.py  main.py  parser.py  scripts.py  stream.py  zoidberg.py
