[metadata]
name = zoidberg
summary = Event response tool for multiple gerrit instances
description-file =
    README.rst
author = Nicola Heald
author-email = nicola@notnowlewis.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6

[pbr]
warnerrors = True

[entry_points]
console_scripts =
    zoidbergd = zoidberg.scripts:main

